--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.2",
-    "sequelize": "^6.14.1"
+    "helmet": "^5.0.2",
+    "sequelize": "^6.14.1",
+    "sqlite3": "^5.0.2"
+  },
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon index.js",
+    "migrate:fresh": "npx sequelize-cli db:migrate:undo:all && npx sequelize-cli db:migrate",
+    "migrate": "npx sequelize-cli db:migrate",
+    "seed": "npx sequelize-cli db:seed:all",
+    "seed:fresh": "npm run migrate:fresh && npx sequelize-cli db:seed:all"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
